modal: fix close button on small screen [1.4.4]

--- a/app/modules/entities/scss/entities_list_adder.scss
+++ b/app/modules/entities/scss/entities_list_adder.scss
@@ -15,7 +15,7 @@
   }
   .buttons{
     margin: 1em;
-    @include display-flex(row, center, center);
+    @include display-flex(row, center, center, wrap);
     a{
       margin: 1em;
       text-align: center;
