--- a/app/modules/general/scss/_modal.scss
+++ b/app/modules/general/scss/_modal.scss
@@ -31,7 +31,7 @@ body.openedModal{
     font-size: 3.6rem;
     font-weight: bold;
     color: white;
-    @include shy(0.8);
+    @include shy(0.9);
     @include position(absolute, 2.6rem, 0);
     &:focus {
       color: $light-grey
@@ -39,20 +39,18 @@ body.openedModal{
   }
   /*Small screens*/
   @media screen and (max-width: $small-screen) {
-    padding: 0.5em;
+    padding: 2em 1em;
     min-width: 80vw;
     margin-top: 10px;
     .close{
-      top: 20px;
+      top: 10px;
       right: 10px;
-      color: $grey;
     }
   }
   /*Medium / Large screens*/
   @media screen and (min-width: $smaller-screen) {
     // Important for the place of the .close button
     padding: 2em;
-    min-width: 40em;
   }
   /*Large screens*/
   @media screen and (min-width: $small-screen) {
